docs: consigner le palier 2.38.7.0
Premier palier a aboutir entierement depuis le 2.36. Bascule vers Java 11.

Deux points a retenir. V2_38_35 fait passer les identifiants de usercredentials
vers userinfo : toute requete SQL directe sur ces tables cesse de fonctionner,
a verifier cote Power BI selon qu il attaque l API ou la base. Et le
planificateur reprogramme les taches en retard heritees du dump, dont
ANALYTICS_TABLE a midi UTC — un palier qui traine peut declencher une
generation complete des tables analytiques.